New change in index.html

--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
     <title>Caabsa Project</title>
   </head>
   <body>
-    <h1>Hello from ho Caabsa</h1>
+    <h1>Hello from Caabsa</h1>
     <p>this is a inside project</p>
     <p>this a new change</p>
     <p>this is a change made it with develop branch</p>
+    <p>This is a new commit from develop</p>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
