changing src of logo in index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <table width=100% border="0">
         <tr>
         <td><span class="Estilo7">
-        <p align="center"> <img src="logo.JPG" width="157" height="90" /> </p>
+        <p align="center"> <img src="./logo.jpg" width="157" height="90" /> </p>
         <p>
           <p>&nbsp;</p>
           <p>&nbsp;</p>
