adding new changes to contratos/index and index.html

--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="styles/main.css">
         <title>CAABSA proyectos</title> 
-           
-      
     </head> 
 
 <body topmargin=10 leftmargin=10 marginheight=0 marginwidth=0 >
@@ -21,23 +19,29 @@
         <tr>
         <td><span class="Estilo7">
         <p align="center"> <img src="https://storage.googleapis.com/sucresalemd-bucket/logo.jpg" width="157" height="90" /> </p>
-        <p align="center"> <img src="./logo.jpg" width="157" height="90" /> </p>
         <p>
           <p>&nbsp;</p>
           <p>&nbsp;</p>
           <h3 align="center"  >"AMPLIACIÓN DE LA TERMINAL DE PASAJEROS DEL AEROPUERTO INTERNACIONAL DE EL SALVADOR MONSEÑOR ÓSCAR ARNULFO ROMERO Y GALDÁMEZ" </h3>
-    <table width="501" border="0" align="center">
+
+          <p>&nbsp;</p>
+
+          <table width="501" border="0" align="center">
         <tr>
-        <td width="162" bgcolor="#DFE4FD"><div align="center"><span class="Estilo27">Actividad</span></div></td>
+          <p align="center"> <img src="https://storage.googleapis.com/sucresalemd-bucket/20200229-cubiertaTecho.jpg" width="640" height="360" /> </p>
+        <td width="162" bgcolor="#DFE4FD"><div align="center"><span class="Estilo27">Seleccionar</span></div></td>
         <td width="329" bgcolor="#DFE4FD"><div align="center">
         <p>&nbsp;</p>
-
         <p>
           <select name="select" onChange="MM_jumpMenu('parent',this,0)">
-              <option value="./index.html">Nombre</option>
+              <option value="./index.html">Opción</option>
               <option value="./contratos">Contratos</option>
               <option value="./materiales">Materiales</option>
-              <option value="./index.html">Opción 2</option>
+              <option value="./index.html">Requisiciones</option>
+              <option value="./index.html">Preparatorias</option>
+              <option value="./index.html">Directorio Proveedores</option>
+              <option value="./index.html">POE (marzo-2020)</option>
+              <option value="./index.html">Especificaciones Técnicas (pdf)</option>
           </select>
         </p>
         <p>&nbsp;  </p>
@@ -50,14 +54,14 @@
     <p>
       <hr size="4" color="gray">
       <form action='inicio.php' method='post' name='form1' id="form1">
-      DUI ó PASAPORTE <input name='Ced' type='Ced' size='8' maxlength='8' />
+      DUI o PASAPORTE <input name='Ced' type='Ced' size='8' maxlength='8' />
       Clave  <input name='Cla' type='password' size='10' maxlength='10' />
       <input type='submit' name='Entrar' value='Entrar' />
       </form>
       <hr size="4" color="gray">
       </p>
 
-    <h5 align="center">El Salvador, febrero 2020</h5>
+    <h5 align="center">El Salvador, marzo 2020</h5>
     </CENTER>
 
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
