--- a/contratos/index.html
+++ b/contratos/index.html
@@ -201,9 +201,9 @@
           <tr>
             <th scope="row">19.3</th>
             <td>MSAC S.A DE C.V</td>
-            <td>DESMONTAJE</td>
-            <td>0.0</td>
-            <td>0.0</td>
+            <td>CANAL NORTE DE AGUAS LLUVIAS</td>
+            <td>217,673.56</td>
+            <td>30</td>
             <td>sin datos</td>
             <td>100</td>
             <td>--/--/----</td>
@@ -212,22 +212,406 @@
             <td>--/--/----</td>
           </tr>
           <tr>
-            <th scope="row">17</th>
+            <th scope="row">17.0</th>
             <td>WIL ENRIQUE MORAN AREVALO</td>
-            <td>DESMONTAJE</td>
-            <td>NO SE LE HIZO CONTRATO</td>
-            <td>OBRA EJECUTADA</td>
-            <td>46,898.75</td>
-            <td>0.0</td>
-            <td>0.0</td>
-            <td>sin datos</td>
+            <td>ESTRUCTURA DE CONCRETO EN FUNDACIONES EN MÓDULOS A, B, C, D Y LA CISTERNA</td>
+            <td>CONTRATADO</td>
+            <td>ABANDONO EL PROYECTO EN 2018</td>
+            <td rowspan="2">240,866.08</td>
+            <td align="center" rowspan="2">10</td>
+            <td rowspan="2">24,086.61</td>
+            <td rowspan="2">sin datos</td>
             <td>100</td>
             <td>--/--/----</td>
             <td>--/--/----</td>
             <td>--/--/----</td>
             <td>--/--/----</td>
           </tr>
-      </tbody>
+          <tr>
+            <th scope="row">17.0</th>
+            <td>INVERSIONES VS MEARDI , S.A DE C.V</td>
+            <td>ESTRUCTURAS DE CONCRETO MODULO A Y B</td>
+            <td>CONTRATADO</td>
+            <td>OBRA EJECUTADA</td>
+            <td>104,140.56</td>
+            <td>35</td>
+            <td>36,449.20</td>
+            <td>vencidas</td>
+            <td>100</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+          </tr>
+          <tr>
+            <th scope="row">17.0</th>
+            <td>PASTORE ORANTES ASOCIADOS, S.A. DE C.V.</td>
+            <td>MANO DE OBRA CIMBRA, ACERO Y CONCRETO, EN VIGAS, COLUMNAS, LOSA DE ENTREPISOS, PAREDES DE CONCRETO, ESCALERAS Y FORJADO DE GRADAS, MOD-A</td>
+            <td>CONTRATADO</td>
+            <td>OBRA EJECUTADA</td>
+            <td>688,947.93</td>
+            <td>30</td>
+            <td>206,684.38</td>
+            <td>VENCIDAS</td>
+            <td>100</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+          </tr>
+          <tr>
+            <th scope="row">17.0</th>
+            <td>PASTORE ORANTES ASOCIADOS, S.A. DE C.V.</td>
+            <td>MANO DE OBRA CIMBRA, ACERO Y CONCRETO, EN VIGAS, COLUMNAS, LOSA DE ENTREPISOS, PAREDES DE CONCRETO, ESCALERAS Y FORJADO DE GRADAS, MOD-B</td>
+            <td>CONTRATADO</td>
+            <td>OBRA EJECUTADA</td>
+            <td>424,130.94</td>
+            <td>30</td>
+            <td>127,239.28</td>
+            <td>VENCIDAS</td>
+            <td>100</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+          </tr>
+          <tr>
+            <th scope="row">17.0</th>
+            <td>FHC INGENIEROS S.A DE C.V</td>
+            <td>CAJAS DE AGUAS LLUVIAS SECTOR SUR</td>
+            <td>CONTRATADO</td>
+            <td>OBRA EJECUTADA</td>
+            <td>103,613.78</td>
+            <td>30</td>
+            <td>31,084.13</td>
+            <td>VENCIADAS</td>
+            <td>100</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+          </tr>
+          <tr>
+            <th scope="row">17.0</th>
+            <td>FHC INGENIEROS S.A DE C.V</td>
+            <td>OBRA CIVIL MODULO A</td>
+            <td>CONTRATADO</td>
+            <td>OBRA EJECUTADA</td>
+            <td>820,930.21</td>
+            <td>10.0</td>
+            <td>82,093.02</td>
+            <td>VENCIADAS</td>
+            <td>100</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+          </tr>
+          <tr>
+            <th scope="row">17.0</th>
+            <td>FHC INGENIEROS S.A DE C.V</td>
+            <td>OBRA CIVIL MODULO B</td>
+            <td>CONTRATADO</td>
+            <td>OBRA EJECUTADA</td>
+            <td>750,000.00</td>
+            <td>10.0</td>
+            <td>75,000.00</td>
+            <td>VENCIADAS</td>
+            <td>100</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+          </tr>
+          <tr>          <tr>
+            <th scope="row">17.0</th>
+            <td>FHC INGENIEROS S.A DE C.V</td>
+            <td>OBRA CIVIL MODULO C</td>
+            <td>CONTRATADO</td>
+            <td>OBRA EJECUTADA</td>
+            <td>835,303.49</td>
+            <td>10.0</td>
+            <td>83,530.35</td>
+            <td>VENCIADAS</td>
+            <td>100</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+          </tr>
+          <tr>
+            <th scope="row">17.0</th>
+            <td>TEDCAL S.A. DE C.V.</td>
+            <td>M. DE O. ACERO, CIMBRA, CONCRETO, VIGAS, COLUMNAS Y LOSA ENTREPISO, MOD-D.</td>
+            <td>CONTRATADO</td>
+            <td>OBRA EJECUTADA</td>
+            <td>570,272.92</td>
+            <td>30.0</td>
+            <td>171,081.88</td>
+            <td>VENCIADAS</td>
+            <td>100</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+          </tr>
+          <tr>
+            <th scope="row">18.0</th>
+            <td>MONTAJES ELECTROMECÁNICOS DE CENTRO AMERICA, S.A. DE C.V.</td>
+            <td>SUMINISTRO, FABRICACIÓN Y MONTAJE DE ESTRUCTURA METÁLICA</td>
+            <td>CONTRATADO</td>
+            <td>OBRA EJECUTADA</td>
+            <td>9,312,292.99</td>
+            <td>30.0</td>
+            <td>1,173,687.99</td>
+            <td>VENCIADAS</td>
+            <td>70</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+          </tr>
+          <tr>
+            <th scope="row">6.0, 9.0</th>
+            <td>CONSTRUMARKET</td>
+            <td>ACABADOS HUNTER DOUGLAS, (ACM, CIELOS U, MINIWAVE, FORROS)</td>
+            <td>CONTRATADO</td>
+            <td>VENCIDO</td>
+            <td>1,705,807.33</td>
+            <td>35.0</td>
+            <td>597,005.27</td>
+            <td>VENCIADAS</td>
+            <td>10</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+          </tr>
+          <tr>
+            <th scope="row">21.0</th>
+            <td>SOLER INGENIEROS CONTRATISTAS, S.A DE C.V</td>
+            <td>SUMINISTRO E INSTALACIÓN DE SISTEMA ELÉCTRICO</td>
+            <td>CONTRATADO</td>
+            <td>VIGENTE</td>
+            <td>2,578,679.20</td>
+            <td>25.0</td>
+            <td>644,669.80</td>
+            <td>VIGENTES</td>
+            <td>30</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>REGULARIZAR</td>
+            <td>REGULARIZAR</td>
+          </tr>
+          <tr>
+            <th scope="row">20.0</th>
+            <td>COMPAÑÍA HIDRÁULICA, S.A. DE C.V.</td>
+            <td>SISTEMA CONTRA INCENDIO</td>
+            <td>CONTRATADO</td>
+            <td>EN CONCILIACIÓN PLAN DE OFERTA CON CEPA</td>
+            <td>213,248.95</td>
+            <td>50.0</td>
+            <td>106,624.48</td>
+            <td>VENCIDA</td>
+            <td>0</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>REGULARIZAR</td>
+            <td>REGULARIZAR</td>
+          </tr>
+          <tr>
+            <th scope="row">5.0</th>
+            <td>PRETEC</td>
+            <td>PAREDES Y DIVISIONES</td>
+            <td>CONTRATADO</td>
+            <td>ABANDONO EL PROYECTO EN 2019</td>
+            <td>678,256.03</td>
+            <td>10.0</td>
+            <td>67,825.60</td>
+            <td>NO PRESENTÓ</td>
+            <td>50.0</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+          </tr>
+          <tr>
+            <th scope="row">22.0, 25.14</th>
+            <td>EQUIBANK EQUIPOS BANCARIOS, S.A. DE C.V.</td>
+            <td>SEÑALES DÉBILES</td>
+            <td>CONTRATADO</td>
+            <td>SE FIRMÓ MODIFICATIVA</td>
+            <td>825,453.98</td>
+            <td>30.0</td>
+            <td>247,636.19</td>
+            <td>FALTA ENTREGUEN LA ACTUALIZACIÓN</td>
+            <td>0.0</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>REGULARIZADO</td>
+            <td>REGULARIZADO</td>
+          </tr>
+          <tr>
+            <th scope="row">19.0</th>
+            <td>MEXICHEM, EL SALVADOR, S.A DE C.V</td>
+            <td>SISTEMA HIDRÁULICO</td>
+            <td>CONTRATADO</td>
+            <td>EN FIRMA PARA AMPLIACIÓN DE PLAZO</td>
+            <td>199,387.80</td>
+            <td>25.0</td>
+            <td>49,846.95</td>
+            <td>FALTA ENTREGUEN LA ACTUALIZACIÓN</td>
+            <td>0</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>REGULARIZADO</td>
+            <td>REGULARIZADO</td>
+          </tr>
+          <tr>
+            <th scope="row">23.0</th>
+            <td>ELEVADORES DE CENTROAMERICA , S.A DE C.V</td>
+            <td>ELEVADORES Y ESCALERAS (TRANSPORTE VERTICAL)</td>
+            <td>CONTRATADO</td>
+            <td>EN FIRMA PARA AMPLIACIÓN DE PLAZO</td>
+            <td>467,320.00</td>
+            <td>50.0</td>
+            <td>233,660.0</td>
+            <td>ENTREGARÁN EL 10/02/2020</td>
+            <td>80</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>REGULARIZADO</td>
+            <td>REGULARIZADO</td>
+          </tr>
+          <tr>
+            <th scope="row">8.0</th>
+            <td>EN CONCRETO (EQUIPOS ESPECIALES, S.A. DE C.V.)</td>
+            <td>INSTALACIÓN DE PISO PULIDO 5MM CON AGREGADO VISTO</td>
+            <td>CONTRATADO</td>
+            <td>FIRMADO</td>
+            <td>617,527.50</td>
+            <td>40.0</td>
+            <td>247,011.00</td>
+            <td>VIGENTES</td>
+            <td>0</td>
+            <td>--/--/----</td>
+            <td>--/--/----</td>
+            <td>REGULARIZAR</td>
+            <td>REGULARIZAR</td>
+          </tr>
+          <tr>
+            <th scope="row">12.0</th>
+            <td>CONSTRUTEC</td>
+            <td>CUBIERTA DE TENCHO</td>
+            <td>CONTRATADO</td>
+            <td>FIRMADO/td>
+            <td>483,176.77</td>
+            <td>38.2</td>
+            <td>184,559.03</td>
+            <td>CONTRA ENTREGA DE MATERIALES</td>
+            <td>20.0</td>
+            <td>OK</td>
+            <td>OK</td>
+            <td>OK</td>
+            <td>OK</td>
+          </tr>
+          <tr>
+            <th scope="row">8.0</th>
+            <td>RODESCO (VISTIENDO PISOS)</td>
+            <td>ALFOMBRAS Y PISO VINÍLICO</td>
+            <td>CONTRATADO</td>
+            <td>FIRMADO</td>
+            <td>164,601.75</td>
+            <td>50.0</td>
+            <td>82,300.88</td>
+            <td>N/A</td>
+            <td>10</td>
+            <td>03/09/2019</td>
+            <td>14/03/2020</td>
+            <td>OK</td>
+            <td>OK</td>
+          </tr>
+          <tr>
+            <th scope="row">14.0</th>
+            <td>DIMARTI, S.A. DE C.V.</td>
+            <td>ARTEFACTOS SANITARIOS</td>
+            <td>CONTRATADO</td>
+            <td>FIRMADO</td>
+            <td>136,437.74</td>
+            <td>50.0</td>
+            <td>68,218.87</td>
+            <td>VIGENTES</td>
+            <td>0</td>
+            <td>OK</td>
+            <td>OK</td>
+            <td>OK</td>
+            <td>OK</td>
+          </tr>
+          <tr>
+            <th scope="row">6.2.1.4</th>
+            <td>DIMARTI, S.A. DE C.V.</td>
+            <td>MAMPARAS DE BAÑO</td>
+            <td>CONTRATADO</td>
+            <td>FIRMADO</td>
+            <td>37,433.63</td>
+            <td>50.0</td>
+            <td>18,716.81</td>
+            <td>VIGENTES</td>
+            <td>0</td>
+            <td>OK</td>
+            <td>OK</td>
+            <td>OK</td>
+            <td>OK</td>
+          </tr>
+          <tr>
+            <th scope="row">12.1.1.3</th>
+            <td>DIMARTI, S.A. DE C.V.</td>
+            <td>IMPERMEABILIZANTE</td>
+            <td>CONTRATADO</td>
+            <td>FIRMADO</td>
+            <td>13,991.25</td>
+            <td>50.0</td>
+            <td>6,995.63</td>
+            <td>VIGENTES</td>
+            <td>0</td>
+            <td>OK</td>
+            <td>OK</td>
+            <td>OK</td>
+            <td>OK</td>
+          </tr>
+          <tr>
+            <th scope="row">8.0</th>
+            <td>DIMARTI, S.A. DE C.V.</td>
+            <td>PISOS PORCELANATO</td>
+            <td>CONTRATADO</td>
+            <td>FIRMADO</td>
+            <td>47,135.98</td>
+            <td>50.0</td>
+            <td>23,567.99</td>
+            <td>VIGENTES</td>
+            <td>0</td>
+            <td>OK</td>
+            <td>OK</td>
+            <td>OK</td>
+            <td>OK</td>
+          </tr>
+          <tr>
+            <th scope="row">6.1.1.8</th>
+            <td>DIMARTI, S.A. DE C.V.</td>
+            <td>ENCHAPES PORCELANATO</td>
+            <td>CONTRATADO</td>
+            <td>FIRMADO</td>
+            <td>28,922.07</td>
+            <td>50.0</td>
+            <td>14,461.04</td>
+            <td>VIGENTES</td>
+            <td>0</td>
+            <td>09/09/2019</td>
+            <td>07/12/2020</td>
+            <td>OK</td>
+            <td>OK</td>
+          </tr>
+  </tbody>
     </table>
     <div class="container">
       <p><a href="../index.html">Back home</a></p>
